--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -36,7 +36,8 @@
 
                 <ImageView
                     android:id="@+id/iv_logo"
-
+                    android:src="@mipmap/ic_launcher"
+                    android:layout_centerInParent="true"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"/>
 
@@ -60,7 +61,12 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_below="@+id/rl_title"
-                android:text="@string/tv_sign_up"/>
+                android:text="@string/tv_sign_up"
+                android:textSize="18sp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="40dp"
+                android:gravity="center"
+                android:textStyle="bold"/>
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_firstname"
                 android:layout_width="match_parent"
@@ -74,6 +80,19 @@
                     android:layout_below="@+id/tv_signUp"
                     android:hint="@string/et_hint_firstname"
                     android:maxLength="50"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="left"
+                    android:background="@drawable/signin_edittext"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                     android:inputType="textCapSentences|textPersonName"/>
             </android.support.design.widget.TextInputLayout>
@@ -91,6 +110,20 @@
                     android:layout_width="match_parent"
                     android:layout_below="@+id/et_firstName"
                     android:hint="@string/et_hint_lastName"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="left"
+                    android:background="@drawable/signin_edittext"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
                     android:maxLength="50"
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                     android:inputType="textCapSentences"/>
@@ -107,7 +140,21 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_below="@+id/et_lastName"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:hint="@string/et_hint_email"
+                    android:gravity="left"
+                    android:background="@drawable/signin_edittext"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
                     android:inputType="textEmailAddress"/>
             </android.support.design.widget.TextInputLayout>
 
@@ -127,6 +174,20 @@
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:hint="@string/et_hint_password"
+
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="10dp"
+                        android:gravity="left"
+                        android:background="@drawable/signin_edittext"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:paddingEnd="5dp"
+                        android:paddingStart="5dp"
                         android:inputType="textPassword"
                         android:password="true"
                         android:textStyle="normal"/>
@@ -157,7 +218,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_centerVertical="true"
-                android:checked="false" />
+                android:checked="false"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"/>
 
                 <TextView
                     android:id="@+id/tv_agreement"
@@ -176,7 +239,20 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/rl_checkBoxContainer"
                 android:layout_marginTop="15dp"
-                android:text="@string/btn_join"/>
+                android:text="@string/btn_join"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:background="@drawable/signin_btn"
+                android:paddingBottom="10dp"
+                android:textColor="@color/white"
+                android:paddingTop="10dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
+                android:paddingStart="5dp"/>
 
             <TextView
 
@@ -186,23 +262,10 @@
                 android:layout_below="@+id/btn_join"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="@string/tv_slide_to_login"/>
+                android:text="@string/slide_to_join"
+                android:gravity="center"/>
         </RelativeLayout>
 
     </ScrollView>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
-        <TextView
-            android:id="@+id/tv_bottomBar"
-
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"/>
-    </RelativeLayout>
 
 </LinearLayout>
