--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorPrimaryDark">#5259DB</color>
     <color name="colorAccent">#4898F3</color>
     <color name="white">#FFFFFF</color>
+    <color name="bg_grey">#DBDBDB</color>
+    <color name="tv_grey_color">#B8B8B9</color>
+
 </resources>
